issue: override z-index -> imgbox

--- a/src/components/styles/_override.scss
+++ b/src/components/styles/_override.scss
@@ -23,7 +23,7 @@
   background: #fff;
   padding: 0;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
-  z-index: 999;
+  //z-index: 999;
   &,
   a {
     font-size: 14px;
